[metadata]
# replace with your username:
name = xoutie
version = attr: xoutie.__version__
author = Thomas Conway
author_email = drtomc@gmail.com
description = A program for detecting outliers in count data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/drtconway/xoutie
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
packages = find:
python_requires = >=3.6
install_requires =
    docopt
    intervaltree
    gtfparse

[options.entry_points]
console_scripts =
    xoutie = xoutie:main
